@@ -1,3 +1,7 @@
+2018-08-20  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Remove 'const's from return-by-value types in KnotArray.h, to keep icpc happy.
+
 2018-05-16  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Add lhapdf_lambda4/5 functions in the Fortran interface.
